Fixed the course placeholder alignment issue

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -158,9 +158,12 @@ tr[aria-expanded="true"] {
 	}
 }
 .pie-placeholder {
+	max-width: 450px;
+    margin: auto;
 	img.icon {
 		width: 100%;
 		height: 100%;
+		margin: 0;
 	}
 }
 .ct-chart {
